--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "PyGuide",
   "publisher": "supportive-ide",
   "description": "Provides additional diagnostics for common Python mistakes",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "license": "MIT",
   "repository": "https://github.com/Supportive-IDE/pyguide",
   "engines": {
@@ -36,7 +36,7 @@
       "properties": {
         "pyguide.researchDataPrivacy": {
           "type": "boolean",
-          "default": true,
+          "default": false,
           "markdownDescription": "Allow usage data collection for a research project investigating symptoms of misconceptions about the Python. ",
           "tags": [
             "usesOnlineServices",
