--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "pyguide",
   "displayName": "PyGuide",
   "publisher": "supportive-ide",
-  "description": "Provides additional diagnostics for common Python mistakes",
+  "description": "Provides additional diagnostics for common Python misconceptions",
   "icon": "images/icon.png",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "license": "MIT",
   "repository": "https://github.com/Supportive-IDE/pyguide",
   "engines": {
@@ -37,8 +37,8 @@
       "properties": {
         "pyguide.allowLogging": {
           "type": "boolean",
-          "default": false,
-          "markdownDescription": "I consent to usage data collection for a University of York research project. [Click here for information about the data we collect and how we store it](https://supportive-ide.hosted.york.ac.uk/participate.html).",
+          "default": true,
+          "markdownDescription": "Allow a University of York research project to collect usage data. [Click here for information about the data we collect and how we store it](https://supportive-ide.hosted.york.ac.uk/participate.html).",
           "tags": [
             "usesOnlineServices",
             "telemetry"
